--- a/docroot/prototypes/branch_future/src/template/poc-schedule.html
+++ b/docroot/prototypes/branch_future/src/template/poc-schedule.html
@@ -1,4 +1,8 @@
 <div class="active-classes has-class">
+  <div class="class-prev">
+
+  </div>
+
   <div class="class-active">
 
   </div>
@@ -14,7 +18,7 @@
 
 <div class="all-classes">
 
-  <div class="class" data-from="0" data-to="20">
+  <div class="class" data-from="0" data-to="10">
     <div class="trainer">Lisanne R.</div>
     <div class="class-name">Core Focus Together</div>
     <div class="class-time-frame">
@@ -26,7 +30,7 @@
     </div>
   </div>
 
-  <div class="class" data-from="25" data-to="50">
+  <div class="class" data-from="10" data-to="20">
     <div class="trainer">Hugo P.</div>
     <div class="class-name">ForeverWell Cardio</div>
     <div class="class-time-frame">
@@ -38,7 +42,7 @@
     </div>
   </div>
 
-  <div class="class" data-from="55" data-to="105">
+  <div class="class" data-from="25" data-to="35">
     <div class="trainer">Carl P.</div>
     <div class="class-name">ZUMBA! Cardio</div>
     <div class="class-time-frame">
@@ -50,7 +54,7 @@
     </div>
   </div>
 
-  <div class="class" data-from="110" data-from="250">
+  <div class="class" data-from="40" data-from="50">
     <div class="trainer">Hugo P.</div>
     <div class="class-name">Cardio ForeverWell</div>
     <div class="class-time-frame">
